overflow bug

--- a/css/file.css
+++ b/css/file.css
@@ -3,19 +3,24 @@
     margin: 0;
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
+    color: white;
 }
 .clearfix{
     content: "";
     display: table;
     clear: both;
 }
+h2, h4{
+    color: white;
+}
 
 main{
     height: calc(100vh - 70px);
-    background-color: azure;}
+    background-color: #141922;
+}
 footer{
     height: 70px;
-    background-color: bisque;    
+    background-color: #282828;    
 }
 
 
@@ -33,17 +38,17 @@ footer{
 }
 .container-sidebar{
     width: 60px;
-    background-color: rgb(253, 255, 142);
+    background-color: black;
 }
 .container-spotify-content{
     width: calc(100% - 60px);
-    background-color: rgb(179, 255, 149);
+    background-color: #141922;
 }
 /*  */
 .upgrade-now{
     text-align: right;
     padding: 30px 0px;
-    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, .2);
 }
 .upgrade-now a{
     font-size: 10px;
@@ -56,10 +61,41 @@ footer{
 }
 /*  */
 .nav-bar{
-    padding: 10px;
-    background-color:lightcoral;
+    
+    background-color:#141922;
 }
+.nav-bar ul{
+    text-align: center;
+    list-style-type: none;
+    width: 100%;
+}
+.nav-bar li{
+    display: inline-block;
+    
+}
+.nav-bar a{
+    text-decoration: none;
+    color: #878787;
+    font-size: 10px;
+    padding: 5px;
+}
+.main-container-recently-played{
+    padding: 15px;
+}
+.container-song{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5px;
+}
+.container-card-song{
+    text-align: center;
+    width: calc(100% / 2 - 5px);
+    border: 1px solid white;
+}
+.disc-cover img{
+    width: 100%;
 
+}
 
 
 
